--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@oclif/core": "^2.8.0",
     "@oclif/plugin-help": "^6.2.12",
     "@oclif/plugin-plugins": "^5.4.9",
+    "@meteora-ag/dlmm": "^1.2.2",
     "@raydium-io/raydium-sdk-v2": "^0.1.64-alpha",
     "@sinclair/typebox": "^0.33.7",
     "@solana/spl-token": "^0.4.8",
@@ -32,6 +33,7 @@
     "@orca-so/whirlpools-sdk": "^0.13.5",
     "@solana/web3.js": "^1.95.3",
     "@types/node": "^18.15.11",
+    "@types/bn.js": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
     "bs58": "^6.0.0",
