improve jupiter swap + solana + meteora connectors

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ PORT=3000
 SOLANA_NETWORK=devnet
 SOLANA_WALLET_JSON=/path/to/wallet.json
 SOLANA_RPC_URL_OVERRIDE=
+SOLANA_RPC_SECOND_URL_OVERRIDE=
+MAX_PRIORITY_FEE=400000
+PRIORITY_FEE_LEVEL=high # Available levels: min, low, medium, high, veryHigh, unsafeMax
